--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,7 +15,9 @@
         <input type="submit" value="Status" name="action3" />
         <input type="submit" value="Log Check" name="action4" />
         <input type="submit" value="Log download" name="action5" />
-        <input type="submit" value="Exit" name="action6" />
+        <input type="submit" value="Exit" name="action6" onsubmit=JavaScript:window.close()/>
+        <a href="JavaScript:window.close()">Close</a>
     </form>
+    
 </body>
 </html>
